# WACC-project

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  compile  draft-run.sh  integration_test.py  test_integration  unoptimised-compiler
src/: ast.rs  debug_util.rs  main.rs  symbol_table.rs
src/basic_optimise/: expr.rs  intermediate.rs  mod.rs  program.rs  stmt.rs
src/code_generator/: asm.rs  asm_creator.rs  clib_functions.rs  def_libary.rs  display.rs  expr.rs  mod.rs  program.rs  stmt.rs  x86_generate.rs
src/code_generator/ir/: asm.rs  ir_generate.rs  ir_info.rs  mod.rs  x86_generate.rs
src/code_generator/peephole_optimise/: description.md  mod.rs
src/common_test/: lexer_test.rs  mod.rs  parser_test.rs
src/interpreter/: expr.rs  interpret.rs  mod.rs  program.rs  stmt.rs
src/parser/: expr.rs  lexer.rs  mod.rs  program.rs  stmt.rs  type_parser.rs  util.rs
src/semantic_checker/: expr.rs  function_checker.rs  mod.rs  program.rs  stmt.rs  stmt_checker.rs  symbol_table.rs  type_checker.rs  util.rs
src/unit_tests/: mod.rs  parser_test.rs
src/unit_tests/parser_test/: expr_tests.rs  mod.rs  program_tests.rs  stmt_tests.rs  type_tests.rs  util_tests.rs
src/unit_tests/semantic_test/: mod.rs  stmt_checker_tests.rs  symbol_table_test.rs  type_checker_tests.rs  unit_tests.rs
wacc-examples-36/: refCompile  refEmulate
wacc-examples-36/function-type-inference/nested_functions/: fibonacciFullRec.wacc  functionConditionalReturn.wacc  printInputTriangle.wacc
wacc-examples/assembled/: README.md
(+90 files in other folders)
