[package]
name = "wacc_36"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
chumsky = { git = "https://github.com/YunkaiZhang233/chumsky.git", features = ["pratt", "label"] }
